packages/gatsby-theme-carbon/src/components/FeatureCard/feature-card.scss
.#{$prefix}--feature-card {
  position: relative;
}

.#{$prefix}--feature-card__row {
  @include carbon--breakpoint('md') {
    margin-left: -1rem;
    margin-right: -1rem;
    position: absolute;
    bottom: 0;
    right: 0;
  }
}

.#{$prefix}--feature-card__img {
  position: relative;
}

.#{$prefix}--feature-card .gatsby-resp-image-wrapper {
  margin-bottom: 0;
}

.#{$prefix}--feature-card:hover
  .#{$prefix}--feature-card__link
  .#{$prefix}--tile {
  background: $hover-ui;
}

.#{$prefix}--feature-card:hover
  .#{$prefix}--feature-card__link
  .#{$prefix}--resource-card--dark
  .#{$prefix}--tile {
  background: $carbon--gray-80; //$hover-ui for gray 90 theme
}

// Display image at square aspect ratio only on mobile
.#{$prefix}--feature-card__img.#{$prefix}--aspect-ratio--1x1 {
  @include carbon--breakpoint('md') {
    padding-bottom: 0;
  }
}

.#{$prefix}--feature-card__img .#{$prefix}--aspect-ratio--object {
  @include carbon--breakpoint('md') {
    position: static;
  }
}

@include carbon--breakpoint('sm') {
  .#{$prefix}--feature-card .gatsby-resp-image-wrapper {
    position: relative;
    display: block;
    margin-left: -1rem;
    margin-right: -1rem;
    max-width: 100%;
    overflow: hidden;
    height: 100%;
  }

  .#{$prefix}--feature-card .gatsby-resp-image-background-image {
    padding-bottom: 100%;
  }

  .#{$prefix}--feature-card .gatsby-resp-image-image {
    width: auto !important;
    left: auto !important;
    right: 0;
  }
}

